commit before revert

--- a/store.html
+++ b/store.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>green_store</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <a href="index.html"><b>Home</b></a> 
-        <a href="store.html"><b>Store</b></a> 
-        <a href="about.html"><b>About us</b></a>
+      <a href="index.html"><b>Home</b></a>
+      <a href="store.html"><b>Store</b></a>
+      <a href="about.html"><b>About us</b></a>
     </nav>
     <h3>GREEN FARM STORE</h3>
     <h5><i>feel free to browse through the green store... </i></h5>
-    <h4>Grapes</h4><img src="https://cdn.pixabay.com/photo/2018/07/20/14/01/grapes-3550729__480.jpg" alt="pic of grape"><img src="https://cdn.pixabay.com/photo/2017/08/18/19/48/grapes-2656259__480.jpg" alt="pic 2 of grape">
-    <h4>Cattle</h4><img src="https://cdn.pixabay.com/photo/2016/11/19/12/50/cow-1839118__480.jpg" alt="pic of Cattle">
-    <img src="https://cdn.pixabay.com/photo/2013/11/22/17/24/cow-215839__480.jpg" alt="cow 2">
-</body>
+    <h4>Grapes</h4>
+    <img
+      src="https://cdn.pixabay.com/photo/2018/07/20/14/01/grapes-3550729__480.jpg"
+      alt="pic of grape"
+    /><img
+      src="https://cdn.pixabay.com/photo/2017/08/18/19/48/grapes-2656259__480.jpg"
+      alt="pic 2 of grape"
+    />
+    <h4>Cattle</h4>
+    <img
+      src="https://cdn.pixabay.com/photo/2016/11/19/12/50/cow-1839118__480.jpg"
+      alt="pic of Cattle"
+    />
+    <img
+      src="https://cdn.pixabay.com/photo/2013/11/22/17/24/cow-215839__480.jpg"
+      alt="cow 2"
+    />
+  </body>
 </html>
