i reverted to this commit This reverts commit 98ae92e72908bc5bdf8f283841071da8ac595547.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="about.html"><b>About us</b></a>
         <a href="#"><b>News</b></a>
         <a href="#"><b>Contact us</b></a>
+        <button>Sign Up</button>
     </nav>
     <h1><b>&#9731 GREEN FARM ENTERPRISE &#9731</b></h1>
     <hr>
