--- a/index.html
+++ b/index.html
@@ -1,66 +1,137 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Volx_TNT</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Justin's Personal Udemy Practice | The complete web developer bootcamp - Colt Steele</title>
 </head>
 
 <body>
-    <nav>
-        <a href="index.html"><b>Home</b></a>
-        <a href="store.html"><b>Store</b></a>
-        <a href="about.html"><b>About us</b></a>
-        <a href="#"><b>News</b></a>
-        <a href="#"><b>Contact us</b></a>
-        <button>Sign Up</button>
-    </nav>
-    <h1><b>&#9731 GREEN FARM ENTERPRISE &#9731</b></h1>
-    <hr>
-    <h3>Welcome to Green Farm!</h3>
-    <img src="images/face.gif">
-    <p>Below are animals currently available in the <b>Green Farm</b>: </p>
-    <ul>
-        <li>Australian Chicken</li>
-        <li>Kaduna Cow</li>
-        <li>Igbo stingy goat(s)
-            <ol>
-                <li>Black wicked goat</li>
-                <li>Yellow strong headed goat</li>
-                <li>Fulani mixed breed</li>
-            </ol>
-        </li>
-        <li>American Turkey</li> 
-        <li>Pigs from France</li>
-    </ul>
-
-    <h3>List of Countries with Chicken</h3>
-    <ol>
-        <li>France</li>
-        <li><a
-                href="https://media.istockphoto.com/id/875273240/photo/spanish-cities-la-sagrada-familia-barcelona-golden-hour.jpg?s=170667a&w=0&k=20&c=Wr3vaunS440RXIFC5SDO2NowHfEMwWsqcPTg0NSJmNc=">Spain</a>
-        </li>
-        <li>Vietnam</li>
-        <li>South Africa</li>
-        <li>Nigeria</li>
-    </ol>
-
-    <h4>Do you wanna make a purchase? Head over to our <a href="store.html"><i><b>store</b></i></a></h4>
+  <!-- <nav>
+    <a href="index.html"><b>Home</b></a>
+    <a href="store.html"><b>Store</b></a>
+    <a href="about.html"><b>About us</b></a>
+    <a href="#"><b>News</b></a>
+    <a href="#"><b>Contact us</b></a>
+  </nav>
+  <h1><b> GREEN FARM ENTERPRISE</b></h1>
+  <hr>
+  <h3>Welcome to Green Farm!</h3>
+  <img
+    src="https://media.istockphoto.com/id/511976070/photo/green-sprouts.jpg?b=1&s=170667a&w=0&k=20&c=DKAA1VW9jurYNgaViE1h1z41gauY2uqnvLCQjeuLzD0="
+    alt="picture of green farm" />
+  <p>Below are animals currently available in the <b>Green Farm</b>:</p>
+  <ul>
+    <li>Australian Chicken</li>
+    <li>Kaduna Cow</li>
+    <li> Igbo stingy goat(s) <ol>
+        <li>Black wicked goat</li>
+        <li>Yellow strong headed goat</li>
+        <li>Fulani mixed breed</li>
+      </ol>
+    </li>
+    <li>American Turkey</li>
+    <li>Pigs from France</li>
+  </ul>
+  <h3>List of Countries with Chicken</h3>
+  <ol>
+    <li>France</li>
+    <li>
+      <a
+        href="https://media.istockphoto.com/id/875273240/photo/spanish-cities-la-sagrada-familia-barcelona-golden-hour.jpg?s=170667a&w=0&k=20&c=Wr3vaunS440RXIFC5SDO2NowHfEMwWsqcPTg0NSJmNc=">Spain</a>
+    </li>
+    <li>Vietnam</li>
+    <li>South Africa</li>
+    <li>Nigeria</li>
+  </ol>
+  <h4> Do you wanna make a purchase? Head over to our <a href="store.html"><i><b>store</b></i></a>
+  </h4> -->
+  <!-- <h2>Html forms</h2>
+  <form action="./tacos">
+    <button type="button">PLEASE DONT SUBMIT</button>
+    <p><label for="nam">Date</label>
+      <input type="date" id="">
+    </p>
+    <p>
+      <label for="name">Full name: </label>
+      <input type="text" id="name" placeholder="text areaaa" name="fullname">
+    </p>
+    <p>
+      <label for="number">Input number:</label>
+      <input type="number" id="number" placeholder="number areaaa">
+    </p>
+    <p>
+      <label for="colors">Select color: </label>
+      <input type="color" id="colors">
+    </p>
+    <button type="submit">Submit</button>
+  </form> -->
+  <!-- <h2>Hijacking Searches</h2>
+  <h3>Search Google</h3>
+  <h4>gooogle link (https://www.google.com/search?q=boy)</h4>
+  <form action="https://www.google.com/search">
+    <input type="search" id="gsearch" placeholder="search google" name="q">
+    <button id="gsearch">Search Google</button>
+  </form>
+  <h3>Search Youtube</h3>
+  <h4>youtube link (https://www.youtube.com/results?search_query=boy)</h4>
+  <form action="https://www.youtube.com/results">
+    <input type="search" id="ysearch" placeholder="search youtube" name="search_query">
+    <button id="ysearch">Search Youtube</button>
+  </form>  -->
+  <!-- <h1>Other input tags</h1>
+  <h2>Checkbox</h2>
+  <form action="/bobby">
+    <input type="checkbox" id="agre" name="terms_o_s2" checked><label for="agre" checked>I agree to all (checked
+      checkbox)</label>
+    <button>Submit</button>
+    <h2>Radio buttons</h2>
+    <h5>Name is used to group elements together in radiobuttons while value is the info that is sent through when this
+      form is submitted</h5>
+    <p><b>Choose your gender:</b></p>
+    <input type="radio" name="gender" id="boy" value="send gender as boy">
+    <label for="boy">Boy</label><br>
+    <input type="radio" name="gender" id="girl" value="send gender as girl">
+    <label for="girl">Girl</label>
+    <h5>output when radio of boy was checked :<i> http://127.0.0.1:5501/bobby?terms_o_s2=on&gender=send+gender+as+boy
+      </i></h5>
+    <h1>Select Tag</h1>
+    <p>
+      <label for="meal">Please select your meal:</label>
+      <select name="meal" id="meal">
+        <option value="rice">Rice</option>
+        <option value="beans">Beans</option>
+        <option value="meat" selected>Meat (default selection)</option>
+        <option value="veg">Vegetables</option>
+      </select>
+    </p>
+    <p>
+      <label for="level">Amount of Cheese</label>
+      <input type="range" name="no_of_cheese" id="level" min="1" max="10">
+    <p>Result: <i> http://127.0.0.1:5501/bobby?terms_o_s2=on&meal=meat&no_of_cheese=2</i></p>
+    </p>
+    <p>
+      <label for="pappy">Write something here:</label><br>
+      <textarea name="wrote_this:" id="pappy" cols="40" rows="10" placeholder="Write here"></textarea>
+    </p>
+  </form> -->
+  <h1>Form Validation</h1>
+  <form action="/dummy">
+    <label for="first">First Name: </label>
+    <input type="text" placeholder="input firstname" id="first" name="firstname is" required><br>
+    <h4>result: <i>http://127.0.0.1:5501/dummy?firstname+is=jays</i></h4>
+    <label for="firs">Max name length is 5: </label>
+    <input type="text" placeholder="input max of 5 letters" id="firs" name="maxname" maxlength="5" minle ngth="3"
+      required>
+    <p>
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="email">
+    <p>automatically checks an email pattern even though it is not required in the html</p>
+    </p>
+    <button>submit</button>
+  </form>
 </body>
 
-
-<!-- Html forms -->
-<form action="/about.html"><p>
-    <label for="name">Full name: </label>
-    <input type="text" id="name" placeholder="text areaaa">
-</p>
-<p>
-<label for="number"></label>
-    <input type="number" id="number" placeholder="number areaaa">
-</p>
-<p><label for="colors"></label>
-    <input type="color" id="colors" placeholder="text areaaa">
-</p></form>
 </html>
