--- a/n.html
+++ b/n.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volx_TNT</title>
-    
 </head>
 
 <body>
@@ -25,17 +24,15 @@
     <ul>
         <li>Australian Chicken</li>
         <li>Kaduna Cow</li>
-        <li>Igbo stingy goat(s)
-            <ol>
+        <li>Igbo stingy goat(s) <ol>
                 <li>Black wicked goat</li>
                 <li>Yellow strong headed goat</li>
                 <li>Fulani mixed breed</li>
             </ol>
         </li>
-        <li>American Turkey</li> 
+        <li>American Turkey</li>
         <li>Pigs from France</li>
     </ul>
-
     <h3>List of Countries with Chicken</h3>
     <ol>
         <li>France</li>
@@ -46,21 +43,21 @@
         <li>South Africa</li>
         <li>Nigeria</li>
     </ol>
-
     <h4>Do you wanna make a purchase? Head over to our <a href="store.html"><i><b>store</b></i></a></h4>
 </body>
-
-
 <!-- Html forms -->
-<form action="/about.html"><p>
-    <label for="name">Full name: </label>
-    <input type="text" id="name" placeholder="text areaaa">
-</p>
-<p>
-<label for="number"></label>
-    <input type="number" id="number" placeholder="number areaaa">
-</p>
-<p><label for="colors"></label>
-    <input type="color" id="colors" placeholder="text areaaa">
-</p></form>
+<form action="/about.html">
+    <p>
+        <label for="name">Full name: </label>
+        <input type="text" id="name" placeholder="text areaaa">
+    </p>
+    <p>
+        <label for="number"></label>
+        <input type="number" id="number" placeholder="number areaaa">
+    </p>
+    <p><label for="colors"></label>
+        <input type="color" id="colors" placeholder="text areaaa">
+    </p>
+</form>
+
 </html>
