--- a/marathonForm.html
+++ b/marathonForm.html
@@ -8,6 +8,42 @@
 </head>
 
 <body>
+    <h1>Race Registeration!</h1>
+    <form action="/submitsomething">
+        <label for="fname">Frist Name</label>
+        <input type="text" name="firstname" id="fname" required>
+        <label for="lname">Last Name</label>
+        <input type="text" name="lastname" id="lname" required>
+        <p>Select a Race:</p>
+        <div>
+            <input type="radio" name="race" id="fivek" value="fivekM">
+            <label for="fivek">Fun Run 5k</label>
+        </div>
+        <div>
+            <input type="radio" name="race" id="half" value="halfM">
+            <label for="half">Half Marathon</label>
+        </div>
+        <div>
+            <input type="radio" name="race" id="full" value="fullM">
+            <label for="full">Full Marathon</label>
+        </div>
+        <div>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" required>
+            <label for="pass">Password</label>
+            <input type="password" name="password" id="pass" required>
+        </div>
+        <div>
+            <label for="agegroup">Select Age Group</label>
+            <select name="age" id="agegroup">
+                <option value="underage">under 18</option>
+                <option value="above 18">18-25</option>
+                <option value="below 40">26-40</option>
+                <option value="above 45" selected>above 45</option>
+            </select>
+        </div>
+        <button type="submit">Register!</button>
+    </form>
 </body>
 
 </html>
