modified last html for marathonForm.html

--- a/marathonForm.html
+++ b/marathonForm.html
@@ -43,6 +43,9 @@
             </select>
         </div>
         <button type="submit">Register!</button>
+        <h4>Result after first submit:
+            <i>http://127.0.0.1:5501/submitsomething?firstname=Justin&lastname=Anazor&race=halfM&email=anazorjustin%40gmail.com&password=daddy+yo%21&age=above+18</i>
+        </h4>
     </form>
 </body>
 
