commit since 4 months

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Justin's Personal Udemy Practice | The complete web developer bootcamp - Colt Steele</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -128,7 +129,7 @@
     <p>
       <label for="email">Email:</label>
       <input type="email" name="email" id="email">
-    <p>automatically checks an email pattern even though it is not required in the html</p>
+    <p>automatically <a href="#nothing">checks</a> an email pattern even though it is not required in the html</p>
     </p>
     <button>submit</button>
   </form>
