--- a/marathonForm.html
+++ b/marathonForm.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Race Registeration!</h1>
-    <form action="/submitsomething">
+    <form method="post" action="/submitsomething">
         <label for="fname">Frist Name</label>
         <input type="text" name="firstname" id="fname" required>
         <label for="lname">Last Name</label>
